# agi-brain-2025

./: .gitignore  ALPHA_AUDIT_CHECKLIST.md  ALPHA_SCAN_SPEC.md  README.md  STAGE8B_STATUS.md  STAGE8B_STATUSLINE.md  STAGE8_README.md  STAGE9_STATUS.md  alpha_research_report.md  alpha_scan_grid.yaml  output.txt  pyproject.toml  start_server.sh  start_stage6.sh  start_trade_stage6.sh  test_output.txt  tuning_results.txt
backtest_results/: daily_stats.csv  report.md  trades.csv
catalog/: all_hypotheses.json
config/: auto_research_policy.json  canary_policy.json  stage6_canary_config.json  strategy_registry.json  unsinkable_limits.json
configs/: canary_deployment.json  winning_strategy_best.json
data/: canary_history.jsonl
experiments/: exp_001_momentum_btc_5m.yaml  exp_002_momentum_eth_5m.yaml  exp_003_volexp_btc_5m.yaml  exp_004_volexp_eth_5m.yaml  exp_005_reversal_btc_5m.yaml  exp_006_reversal_eth_5m.yaml
lab/: auto_research_brain.py  optimization_config.yml  optimization_loop.py
logs/: shadow_decisions.jsonl
research/: 05_alpha_scan.ipynb
results/: alpha_scan_summary.md  exp_001_momentum_btc_5m.json  exp_002_momentum_eth_5m.json  exp_002_with_costs.json  exp_003_volexp_btc_5m.json  exp_003_with_costs.json  exp_004_volexp_eth_5m.json  exp_004_with_costs.json  exp_005_reversal_btc_5m.json  exp_006_reversal_eth_5m.json
scripts/: alpha_backtest_stage1_60d.py  alpha_backtest_stage2_3y.py  alpha_generator.py  alpha_stage0_generator.py  alpha_stage1_quick_backtest.py  analyze_alpha_vs_stage6.py  analyze_custom_portfolio.py  analyze_regime_metrics.py  (+51 more)
(+167 files in other folders)
