[project]
name = "agi-brain"
version = "1.0.0"
description = "AGI-контейнер (мозг): наблюдает, анализирует, учится и советует Владельцу"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    
    # HTTP client
    "httpx>=0.25.0",
    
    # OpenAI
    "openai>=1.0.0",
    
    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "sqlalchemy[asyncio]>=2.0",
    
    # Observability
    "prometheus-client>=0.19.0",
    "structlog>=23.0",
    
    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "ccxt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1.9",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
